telemedicine/dosewatch/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: dose-watch
  namespace: dose-watch
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "127.0.0.1.dw.sslip.io"
    port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: dosewatch-certs
